--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,18 +29,18 @@ jobs:
           java-version: '17'
           components: 'native-image'
           native-image-musl: true
-##           github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
 #      - name: get graal
 #        run: |
 #          chmod u+x script/get-graal && script/get-graal
 
-      - name: Install native dev tools
-        run: |
-          sudo apt-get update
-          sudo apt-get -y install curl unzip gcc g++ build-essential zlib1g-dev libsnappy-dev
+#      - name: Install native dev tools
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get -y install curl unzip gcc g++ build-essential zlib1g-dev libsnappy-dev
           # chmod u+x script/setup-musl && script/setup-musl
-        shell: bash
+#        shell: bash
 
       - name: Cache deps
         uses: actions/cache@v1
@@ -65,10 +65,10 @@ jobs:
       #  run: chmod u+x script/install-clojure && script/install-clojure
       #  shell: bash
         
-      - name: Setup Babashka
-        uses: turtlequeue/setup-babashka@v1.5.0
-        with:
-          babashka-version: 0.8.156
+#      - name: Setup Babashka
+#        uses: turtlequeue/setup-babashka@v1.5.0
+#        with:
+#          babashka-version: 0.8.156
 
       - name: Check bb runs
         run: bb --version
