--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           version: '22.2.0'
           java-version: '17'
           components: 'native-image'
-          native-image-musl: true
+#          native-image-musl: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
 #      - name: get graal
