--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,12 +35,12 @@ jobs:
 #        run: |
 #          chmod u+x script/get-graal && script/get-graal
 
-      - name: Install native dev tools
-        run: |
-          sudo apt-get update
-          sudo apt-get -y install curl unzip gcc g++ build-essential zlib1g-dev libsnappy-dev
-          chmod u+x script/setup-musl && script/setup-musl
-        shell: bash
+#      - name: Install native dev tools
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get -y install curl unzip gcc g++ build-essential zlib1g-dev libsnappy-dev
+#          chmod u+x script/setup-musl && sudo script/setup-musl
+#        shell: bash
 
       - name: Cache deps
         uses: actions/cache@v1
