--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,17 +56,55 @@ jobs:
       - name: compile with bb
         run: bb native-image
 
-      # - name: Make native image
-      #   run: chmod u+x script/compile && script/compile
-      #   shell: bash
-
-      # - uses: actions/upload-artifact@v2
-      #   with:
-      #     name: dataloader
-      #     path: dataloader
-
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
           files: dbloader
           tag_name: LATEST
+
+  windows:
+    runs-on: windows-2022
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup GraalVM+musl
+        uses: graalvm/setup-graalvm@v1
+        with:
+          version: '22.2.0'
+          java-version: '17'
+          set-java-home: true
+          components: 'native-image'
+          native-image-musl: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Cache deps
+        uses: actions/cache@v1
+        id: cache-deps
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-deps-${{ hashFiles('deps.edn') }}
+          restore-keys: |
+            ${{ runner.os }}-deps-
+
+      - name: Install clojure tools
+        uses: DeLaGuardo/setup-clojure@9.3
+        with:
+          # Install just one or all simultaneously
+          # The value must indicate a particular version of the tool, or use 'latest'
+          # to always provision the latest version
+          cli: 1.11.1.1149
+          bb: 0.9.160
+
+      - name: Check bb runs
+        run: bb --version
+
+      - name: compile with bb
+        run: bb native-image
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: dbloader.exe
+          tag_name:
+            LATEST
